# maat

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  MODEL_CAPABILITY_FRAMEWORK.md  PLAN.md  README.md  SPEC.md  maat.toml
automations/: daily-breaking-news-telegram.toml  daily-summary.toml  forsaken-roblox-content-trends-email.toml  forsaken-roblox-trends-email.toml
crates/maat-config/: Cargo.toml
crates/maat-config/src/: automations.rs  config.rs  lib.rs  prompts.rs  secrets.rs  skills.rs
crates/maat-core/: Cargo.toml
crates/maat-core/src/: commands.rs  lib.rs
crates/maat-heralds/: Cargo.toml
crates/maat-heralds/src/: input.rs  lib.rs  telegram.rs  tui.rs
crates/maat-llm/: Cargo.toml
crates/maat-llm/src/: lib.rs
crates/maat-memory/: Cargo.toml
crates/maat-memory/src/: lib.rs  sqlite.rs  window.rs
crates/maat-minions/: Cargo.toml
crates/maat-minions/src/: lib.rs
crates/maat-pdf-cli/: Cargo.toml
crates/maat-pdf-cli/src/: main.rs
crates/maat-pharoh/: Cargo.toml
crates/maat-pharoh/src/: compaction.rs  lib.rs  session.rs
crates/maat-ra/: Cargo.toml
crates/maat-ra/src/: main.rs
crates/maat-talents/: Cargo.toml
crates/maat-talents/src/: automation.rs  files.rs  imap.rs  lib.rs  search.rs  skills.rs
crates/maat-talents/src/google/: auth.rs  calendar.rs  gmail.rs  mod.rs
crates/maat-vizier/: Cargo.toml
crates/maat-vizier/src/: lib.rs
prompts/: capability_nudge.md  compaction.md  intent_classifier.md  named_session.md  primary_system.md
prompts/bouquet/: identity.md  memory.md  mistakes.md  persona.md  rules.md  workflow.md
prompts/bouquet/users/: default.md
skills/image-rectify/: README.md  SKILL.md  maat-skill.toml
skills/pdf/: SKILL.md  maat-skill.toml
skills/pdf/scripts/: create_pdf.py
