[package]
name    = "maat-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
toml        = { workspace = true }
keyring     = { workspace = true }
aes-gcm     = { workspace = true }
base64      = { workspace = true }
tracing     = { workspace = true }
