[package]
name    = "maat-config"
version = "0.1.0"
edition = "2021"

[dependencies]
maat-core   = { path = "../maat-core" }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
toml        = { workspace = true }
keyring     = { workspace = true }
aes-gcm     = { workspace = true }
base64      = { workspace = true }
tracing     = { workspace = true }
serde_yaml  = "0.9"
tokio       = { workspace = true }
chrono      = { workspace = true }
