[package]
name    = "maat-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
maat-core    = { path = "../maat-core" }
async-openai = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
serde_json   = { workspace = true }
reqwest      = { workspace = true }
