[package]
name    = "maat-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
maat-core   = { path = "../maat-core" }
async-trait = { workspace = true }
rusqlite    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
ulid        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
