[package]
name    = "maat-vizier"
version = "0.1.0"
edition = "2021"

[dependencies]
maat-core    = { path = "../maat-core" }
maat-minions = { path = "../maat-minions" }
maat-llm     = { path = "../maat-llm" }
kameo        = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
