[package]
name    = "maat-vizier"
version = "0.1.0"
edition = "2021"

[dependencies]
maat-core    = { path = "../maat-core" }
maat-minions = { path = "../maat-minions" }
maat-llm     = { path = "../maat-llm" }
maat-memory  = { path = "../maat-memory" }
kameo        = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
async-trait  = { workspace = true }
ulid         = { workspace = true }
